@@ -1,3 +1,6 @@
+27/4/12
+  Fixed click to focus
+
 22/4/12
   Added check for stray ampersands in the external text
   Seperated the font colours from the bar in the config.h and the rc files
